# bazel_compile_commands_extractor_rs

./: .bazelrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  README.md  cargo-bazel-lock.json  refresh_compile_commands.bzl  rust-toolchain.toml
.github/: renovate.json
.github/workflows/: ci.yml  renovate.yml
.zed/: settings.json
examples/01-bzlmod/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
examples/01-bzlmod/include/logging/: log.hpp  logger.hpp
examples/01-bzlmod/src/: main.cpp
examples/01-bzlmod/src/logging/: log.hpp  logger.cpp
examples/01-bzlmod/test/: log_test.cpp
examples/02-compare/: .gitignore  README.md  compare.sh  normalize_compile_commands.py
examples/02-compare/local/: .gitignore  BUILD.bazel  MODULE.bazel
examples/02-compare/reference/: .gitignore  BUILD.bazel  MODULE.bazel
examples/02-compare/reference/include/example/: greeting.h
examples/02-compare/reference/src/: greeting.cc  main.cc
examples/03-hermit/: .gitignore  BUILD.bazel  MODULE.bazel  bazel-03-hermit  bazel-bin  bazel-out  bazel-testlogs
examples/03-hermit/app/: BUILD.bazel  main.cc
src/: lib.rs  main.rs
tests/: extractor_test.rs
tools/: buildifier
