load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load(":refresh_compile_commands.bzl", "refresh_compile_commands")
load("@crates//:defs.bzl", "all_crate_deps")

filegroup(
    name = "clippy_config",
    srcs = ["clippy.toml"],
)

exports_files(["refresh_compile_commands.bzl"])

alias(
    name = "gen_rust_project",
    actual = "@rules_rust//tools/rust_analyzer:gen_rust_project",
)

rust_library(
    name = "bazel_compile_commands_extractor",
    srcs = ["src/lib.rs"],
    deps = all_crate_deps(normal = True),
)

rust_binary(
    name = "compile_commands_extractor",
    srcs = ["src/main.rs"],
    aliases = {
        ":bazel_compile_commands_extractor": "bazel_compile_commands",
    },
    deps = [":bazel_compile_commands_extractor"],
)

rust_test(
    name = "extractor_test",
    srcs = ["tests/extractor_test.rs"],
    aliases = {
        ":bazel_compile_commands_extractor": "bazel_compile_commands",
    },
    deps = [
        ":bazel_compile_commands_extractor",
        "@crates//:serde_json",
    ],
)

refresh_compile_commands(
    name = "refresh_all",
)
