load("@rules_rs//rs:rust_binary.bzl", "rust_binary")
load("@rules_rs//rs:rust_library.bzl", "rust_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")
load(":refresh_compile_commands.bzl", "refresh_compile_commands")

exports_files([
    "refresh_compile_commands.bzl",
    "clippy.toml",
])

rust_library(
    name = "bazel_compile_commands_extractor",
    srcs = ["src/lib.rs"],
    crate_name = "bazel_compile_commands_extractor",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)

rust_binary(
    name = "compile_commands_extractor",
    srcs = ["src/main.rs"],
    crate_root = "src/main.rs",
    visibility = ["//visibility:public"],
    deps = [":bazel_compile_commands_extractor"],
)

rust_test(
    name = "extractor_test",
    srcs = ["tests/extractor_test.rs"],
    crate_root = "tests/extractor_test.rs",
    deps = [
        ":bazel_compile_commands_extractor",
        "@crates//:serde_json",
    ],
)

platform(
    name = "windows_platform",
    constraint_values = [
        "@llvm//constraints/windows/abi:gnullvm",
        "@llvm//constraints/windows/crt:msvcrt",
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
    visibility = ["//visibility:private"],
)

refresh_compile_commands(
    name = "refresh_all",
)
