module(
    name = "bazel_compile_commands",
    version = "0.0.0",
)

bazel_dep(name = "rules_rs", version = "0.0.94")
bazel_dep(name = "llvm", version = "0.8.11")

RUST_EDITION="2024"
RUST_VERSION="1.85.0"


toolchains = use_extension("@rules_rs//rs/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = RUST_EDITION,
    version = RUST_VERSION,
)
use_repo(toolchains, "default_rust_toolchains")

register_toolchains(
    "@default_rust_toolchains//:all",
    "@llvm//toolchain:all"
)

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")

crate.from_cargo(
    name = "crates",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "crates")
