load("@bazel_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "bzlmod_example_lib",
    srcs = glob(["src/logging/*.cpp"]),
    hdrs = glob(["include/**/*.hpp"]),
    strip_include_prefix = "include",
)

cc_test(
    name = "bzlmod_example_test",
    srcs = glob(["test/*.cpp"]),
    deps = [":bzlmod_example_lib", "@googletest//:gtest_main"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = [
        ":bzlmod_example_test",
    ],
)
