module(
    name = "bzlmod_example",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

bazel_dep(name = "bazel_compile_commands", dev_dependency = True)
local_path_override(
    module_name = "bazel_compile_commands",
    path = "../../",
)
