module(
    name = "hermitic_example"
)

bazel_dep(name = "rules_cc", version = "0.2.20")
bazel_dep(name = "llvm", version = "0.8.11")

toolchain = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
toolchain.exec(
    arch = "x86_64",
    os = "linux",
)
toolchain.exec(
    arch = "aarch64",
    os = "linux",
)
toolchain.target(
    arch = "x86_64",
    os = "linux",
)
toolchain.target(
    arch = "aarch64",
    os = "linux",
)
use_repo(toolchain, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")


bazel_dep(name = "bazel_compile_commands", dev_dependency = True)
local_path_override(
    module_name = "bazel_compile_commands",
    path = "../../",
)
