load("@bazel_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "greeting",
    srcs = ["src/greeting.cc"],
    hdrs = ["include/example/greeting.h"],
    strip_include_prefix = "include",
)

cc_binary(
    name = "hello",
    srcs = ["src/main.cc"],
    deps = [":greeting"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = [":hello"],
)
